JWT expiration handling.